<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Score Keep</string>
    <string name="game_description">Game: </string>
    <string name="new_game">New Game</string>
    <string name="new_game_short">New</string>
    <string name="view_players">View Players</string>
    <string name="view_players_short">Players</string>
    <string name="add_player">Add Player</string>
    <string name="add_player_short">Add</string>
    <string name="start_game">Start Game</string>
    <string name="start_game_short">Start</string>
    <string name="player_name">Name:</string>
    <string name="get_started">Press Menu -> New Game to begin.</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_history_short">Clear</string>
    <string name="no_players">No players, Press Menu-&gt;New to create player.</string>
    <string name="game">Game</string>
    <string name="no_games">No games.\n\nGo back to create a new game.</string>
    <string name="new_player">New Player</string>
    <string name="no_players_selected">You must select at least one player to start a game.</string>
    <string name="add_score">Add Score</string>
    <string name="plus_5">+5</string>
    <string name="minus_5">-5</string>
    <string name="minus_1">-1</string>
    <string name="plus_1">+1</string>
    <string name="number_parse_failed">Failed to interpret a number.</string>
    <string name="score">Score</string>
    <string name="context">Context</string>
    <string name="change_players">Change Players</string>
    <string name="reset_scores">Reset Scores</string>
    <string name="reset_scores_short">Reset</string>
    <string name="score_round">Score Round</string>
    <string name="bid">Bid</string>
    <string name="bidder_made_bid">Bidder made bid?</string>
    <string name="tricks_taken">tricks taken</string>
    <string-array name="gamedef_fivehundred_bidtype">
        <item>Spades</item>
        <item>Clubs</item>
        <item>Diamonds</item>
        <item>Hearts</item>
        <item>No Trump</item>
        <item>Nello</item>
        <item>Double Nello</item>
    </string-array>
    <string-array name="gamedef_fivehundred_bidamount">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="drawer_items">
        <item>Home</item>
        <item>New Game</item>
        <item>Resume Game</item>
        <item>Players</item>
        <item>Settings</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="resume_game_short">Resume</string>
    <string name="resume_game">Resume Game</string>
    <string name="settings_keepscreenon">Prevent the device from sleeping</string>
    <string name="about">About ScoreKeep</string>
    <string name="about_short">About</string>
    <string name="about_dialog_text">\u00A9 2011-2015 Tony Murray</string>
    <string name="score_history">Score History</string>
    <string name="settings_keepscreenon_summary">Prevents your device from going to sleep while you are on the scoring screen.</string>
    <string name="clear_players">Clear Players</string>
    <string name="app_tagline">You\'ll never need a pen and paper again!</string>
    <string name="dialog_delete_everything">Delete all players and games?</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="manage_players">Manage Players</string>
    <string name="no_players_add_one">Please create players first.</string>
    <string name="game_name_hint">Game Title</string>
    <string name="player_avatar">Player Avatar</string>
</resources>
