<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minus_5" android:id="@+id/minus_5"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minus_1" android:id="@+id/minus_1"></Button>
        <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/score_edit" android:inputType="number|numberSigned" android:hint="Amount to add"></EditText>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/plus_1" android:id="@+id/plus_1"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/plus_5" android:id="@+id/plus_5"></Button>
    </LinearLayout>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/context_edit" android:hint="Context" android:inputType="textCapSentences"></EditText>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_width="match_parent">
        <Button android:id="@+id/ok" android:text="@android:string/ok" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"></Button>
        <Button android:id="@+id/cancel" android:text="@android:string/cancel" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"></Button>
    </LinearLayout>
</LinearLayout>
