<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical">
	<TextView android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_height="wrap_content" android:id="@+id/score_history"
		android:text="@string/score_history" android:layout_gravity="center_horizontal"
		android:layout_width="wrap_content"></TextView>
	<View android:id="@+id/Separator" android:layout_width="match_parent"
		android:layout_height="2dp" android:background="?android:attr/listDivider" />
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TextView android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_weight="1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/score"
			android:text="@string/score"></TextView>
		<TextView android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_weight="1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/context"
			android:text="@string/context"></TextView>
	</LinearLayout>
</LinearLayout>
