<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_game_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

<Button
        android:id="@+id/new_game_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel" />

    <EditText
        android:id="@+id/new_game_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:editable="true"
        android:inputType="textCapWords"
        android:selectAllOnFocus="true"
        android:text="@string/new_game"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/new_game_add_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_game_text"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_menu_invite"
        android:text="@string/add_player" />

    <Button
        android:id="@+id/new_game_go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/new_game_add_player_button"
        android:layout_marginRight="6dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@android:drawable/ic_media_play"
        android:text="@string/start_game" />
</RelativeLayout>